# meu_rpg_llm

./: .gitignore  Prompts de Geração de Termos por Gênero de RPG.md  configurar_db_sqlite.py  converter_glossario.py  gerador_gemini.py  popular_arquivo_bruto.py  popular_personagens.py  pyproject.toml  requirements.txt  árvore de ficheiros.txt
agents/: chromadb_agent.py  mj_agent.py  neo4j_agent.py  sqlite_agent.py  world_agent.py
config/: config.py
dados_config/: config_narracao.json  regras_jogo.json
dados_em_producao/: estado.db
dados_estruturados/: rpg_data.db
dados_gemini/: aetheria.py  ancora.py  arcana.py  arcanum.py  bioma.py  chromos.py  consolidado_rpg.py  cosmos.py  crepúsculo.py  cripta.py  crono-vazio.py  crono.py  díade.py  echo.py  espectro.py  forja.py  forjador.py  glacialis.py  gênese.py  gênesis-zero.py  lumen.py  metrópole.py  miragem.py  nautilus.py  nexus.py  oráculo.py  quasar.py  quântico.py  relíquia.py  rúnico.py  singularidade.py  sombra.py  synthetica.py  umbral.py  vapor.py  veridia.py  vortex.py  vácuo.py  éter.py
dados_lore/: Documento RPG - Arquivo Bruto 10-06-2325.md  Documento RPG - Arquivo Bruto 11-06-2325.md  Documento RPG - Grandes Civilizacoes Galacticass.md  Documento RPG - Informações Espaciais das Estações.md  Documento RPG - Modo de Narração do RPG (Sumário).md  Documento RPG - Personagens.md
data/: entity_types_data.py
documentos_rpg_md/: Documento RPG - Conhecimentos Universais.md  Documento RPG - Estado Atual da Campanha e Log.md  Documento RPG - Glossário de Termos.md  Documento RPG - Layout Interno da Estação Vigilância Solaris.md
ideia_projeto/: Ideia Central do Projeto RPG_ Universo Dinâmico Impulsionado por IA.md
lore_fonte/: arquivo_bruto_rpg.yml  civilazacoes_galacticas.yml  conhecimentos_universais.yml  infomacoes_espaciais.yml  layout_est_vigilancia_solaris.yml  logs_memorias.yml  mapa_universo.yml  narracao.yml  personagens.yml  sistemas_regras_jogo.yml  status_atual_campanha_log.yml  status_main_character.yml  termos_glossario.yml
(+42 files in other folders)
